--- a/InteractiveHtmlBom/web/ibom.css
+++ b/InteractiveHtmlBom/web/ibom.css
@@ -726,22 +726,23 @@ a {
     touch-action: none;
 }
 
-#schematic {
+
+div#schematic {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
-#schematic-img {
-  position: relative;
-  z-index: 4;
-  width: 1000px; /* Ensures fixed image size so that hardcoded svg coords don't break. TODO remove */
-}
-
-#schematic-highlights {
+div#schematic canvas {
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 5;
-  width: 100%;
-  height: 100%;
+}
+
+#schematic-bg {
+  z-index: 1;
+}
+#schematic-highlight {
+  z-index: 2;
 }
